--- a/SimpleMathLibrary/ClientApplication/ClientApplication.vcxproj.filters
+++ b/SimpleMathLibrary/ClientApplication/ClientApplication.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\SimpleMathLibrary\SimpleMath.h">
+    <ClInclude Include="SimpleMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
